<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/welcome"
        android:textAppearance="@style/text_style1"
        android:gravity="top"
        />


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:hint="@string/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/pword"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpass"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_pword"
        android:gravity="top"
        android:textAppearance="@style/text_style4"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_background"
        android:textColor="@color/button_text_color"
        android:textSize="15sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sign_in_withgoogle"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="510dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/google_button"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:text="@string/sign_in_withgoogle"
        android:textAllCaps="false"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="@id/sign_up_textView"
        android:layout_alignParentEnd="@id/sign_up_textView"
        android:layout_marginStart="85dp"
        android:layout_marginTop="590dp"
        android:text="@string/no_account"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="588dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/text_style5"
        />

</RelativeLayout>